# meanflow-ot-proteina

./: .gitignore  pyproject.toml
.claude/: settings.json
configs/experiment_config/: training_ca.yaml  training_ca_debug.yaml  training_ca_motif.yaml
data/debug/: debug.csv
data/pdb_raw/: cath_label_mapping.pt
docs/: architecture.md
docs/hypotheses/: adp-wt-scaling.md  fid_magnitude_handoff_2026_04_23.md  t-gate-chir.md
docs/plans/: wandb-integration-plan.md
logs/: train_debug_30616.err  train_debug_30616.out  train_debug_30618.err  train_debug_30618.out  train_debug_30619.err  train_debug_30619.out
proteinfoundation/: train.py
proteinfoundation/callbacks/: _sampling_utils.py  fid_callback.py  protein_eval.py  (+2 more)
scripts/: compute_refold_rmsd.py  dump_pdb_eval_ca_features.py  dump_pdb_eval_ca_features.sbatch  eval_metrics.py  eval_metrics.sbatch  eval_metrics_sweep.sh  fid_diagnostic.sbatch  fid_floor_probe.py  fid_multistep_probe.py  hyp_adp_wt_scaling.sbatch  hyp_t_gate_chir.sbatch  hyp_t_gate_plus_adp_scaling.sbatch  prepare_debug_data.py  prepare_pdb.py  prepare_pdb_1k.py  savail  train.sbatch  train_base_1k.sbatch  train_debug.sbatch  train_ot.sbatch
tests/: conftest.py  test_chirality_diagnostics.py  test_ckpt_topk_by_rmsd.py  test_ckpt_topk_by_val_loss.py  test_global_step_wandb_logger.py  test_hyp_adp_wt_scaling.py  test_hyp_t_gate_chir.py  test_jvp_smoke.py  test_loss_accumulation.py  test_ot_integration.py  test_ot_pool.py  test_ot_sampler.py  test_periodic_ckpt_rotation_smoke.py  test_selfcond_chirality.py  test_training_step.py
(+39 files in other folders)
